# local-network

./: .dockerignore  .env  .environment  .gitignore  .gitmodules  .overmind.env  BUGS.md  CHEATSHEET.md  CLAUDE.md  Cargo.toml  Makefile  Procfile  README.md  TESTING-STATUS.md  bench.js  chain.sh  clone-repos.bash  common-ts.sh  contracts.json  create-tables.sql  docker-compose.yaml  fisherman.bash  gateway-agent.sh  gateway.json  gateway.jsonnet  gateway.sh  gateway.toml  graph-contracts.json  graph-contracts.sh  graph-node.sh  graph-subgraph.sh  graph_contracts.json  horizon.json  indexer-agent.sh  indexer-service.sh  ipfs.sh  patch.bash  postgres.env  postgres.sh  prelude.bash  (+11 more)
addresses/: create-local-address-files.sh
bench/: bench.ts  package.json  plot.py
block-oracle/: Dockerfile  config.toml  contract-init.ts  run.sh  test-build.sh
chain/: Dockerfile  run.sh
config/: README.md  create-local-config-files.sh
controller/: Dockerfile  controller.ts
dipper/: Dockerfile  run.sh
docs/: README.md
eligibility-oracle-node/: Dockerfile  run.sh
flows/: EligibilityOracleTesting.md  IndexingPaymentsTesting.md  README.md  dips-testing.md  indexer-agent-testing.md
tests/: Cargo.toml  README.md
tests/.config/: nextest.toml
tests/src/: cast.rs  graphql.rs  lib.rs  management.rs  polling.rs  staking.rs
tests/tests/: allocation_lifecycle.rs  eligibility.rs  network_state.rs  provision_management.rs  query_fees.rs  reo_governance.rs  reward_collection.rs  rewards_conditions.rs  stake_management.rs  subgraph_denial.rs
tools/: Cargo.toml
tools/src/: main.rs
(+296 files in other folders)
