[package]
name = "local-network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
reqwest = "0.12.9"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.3", features = ["postgres"] }
tokio = { version = "1.41.1", features = ["macros", "rt", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
