[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
bs58 = "0.4"
clap = "3.0"
hdwallet = "0.3"
hex = "0.4"
primitive-types = "0.8"
receipts = { git = "ssh://git@github.com/edgeandnode/receipts.git", rev = "b01dd7b" }
secp256k1 = "0.20"
sha3 = "0.9"
structopt = "0.3"
structopt-derive = "0.4"
